testsuite/tests/grammar/invalid_parserless/unref_node.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(
        ExampleNode(null(ParserlessNode))
        | ExampleNode(Identifier(@identifier))
    )
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode {
    @parse_field n: FooNode
}

class ParserlessNode : FooNode {
}

class Identifier : FooNode implements TokenNode {
}
